# drink_water

./: .coveragerc  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
application/domain_service/: __init__.py  check_user_goals.py  check_user_goals_service.py
application/entities/: __init__.py  list_user_actions_entity.py  user_goal_entity.py
application/use_cases/: __init__.py  list_user_actions_use_case.py  user_goal_use_case.py
core/: settings.py  urls.py
drink_water/: admin.py  apps.py
drink_water/api/v1/: urls.py
drink_water/migrations/: 0001_initial.py
drink_water/models/: __init__.py  action_model.py  user_action_model.py  user_data_history_model.py  user_model.py
drink_water/serializers/: __init__.py  list_user_actions_serializer.py  user_action_serializer.py  user_goals_serializer.py  user_serializer.py
drink_water/views/: __init__.py  action_view.py  user_action_view.py  user_goals_view.py  user_view.py
tests/: conftest.py
tests/test_application/test_domain_service/: test_check_user_goals.py
tests/test_application/test_use_cases/: test_list_user_actions_use_case.py  test_user_goals_use_case.py
tests/test_drink_water/test_model/: test_base_model.py  test_user_action_model.py  test_user_model.py
tests/test_drink_water/test_serializers/: test_list_user_actions_serializer.py  test_user_action_serializer.py  test_user_goal_serializer.py  test_user_serializer.py
tests/test_drink_water/test_views/: test_user_action_view.py  test_user_goals_view.py  test_user_view.py
