[tool.poetry]
name = "drink-water"
version = "0.1.0"
description = "System for register the quantity of water you drink"
authors = ["Bruno R. Scherer <brunoricardojava@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "~4.2"
djangorestframework = "~3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
